src/index.scss
$color-cell-revealed: #cccccc;
$color-cell-hidden: #333333;
$color-info: #cccccc;
$color-info-border: #333333;
$color-grid: #6b988e;
$color-mine: #fc543c;

body {
  background: linear-gradient(0deg, #d9cfe0, #e7e1ee, #d9cfe0);
  font-family: sans-serif;
}

.cell {
  background: $color-cell-revealed;
  border: 1px solid $color-grid;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  font-weight: 600;
  height: 45px;
  line-height: 45px;
  text-align: center;
  width: 45px;

  &.flag, &.mine {
    background: $color-mine;
  }

  &:not(.revealed) {
    background: $color-cell-hidden;
  }
}

.clear {
  clear: both;
}

.game {
  background: $color-grid;
  margin: 15vh auto;
  padding: 20px;
  width: fit-content;
}

.grid {
  td {
    padding: 0;
  }
}

.game-info {
  border: 5px double $color-info-border;
  border-radius: 10px;
  box-sizing: border-box;
  color: $color-info;
  display: flex;
  flex-direction: column;
  margin-bottom: 20px;
  padding: 7px;
  text-align: center;

  .status {
    font-size: xx-large;
  }
}

